--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,8 @@ colorama==0.3.9
 enum-compat==0.0.2
 eventlet==0.21.0
 Flask==0.12.2
+Flask-JWT==0.3.2
+Flask-PyMongo==0.5.1
 Flask-SocketIO==2.9.1
 Flask-WTF==0.14.2
 greenlet==0.4.12
@@ -13,6 +15,8 @@ Jinja2==2.9.6
 lazy-object-proxy==1.3.1
 MarkupSafe==1.0
 mccabe==0.6.1
+mongoengine==0.13.0
+PyJWT==1.4.2
 pylint==1.7.2
 pymongo==3.4.0
 python-engineio==1.7.0
